gitignore updated, svn meta removed

--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -1,8 +1,8 @@
 /*
- Theme Name: 	Message-To-Rio
+ Theme Name: 	Kleem
  Template: 		twentyeleven
  Author: 		stfn
- Author 			URI: http://wordpress.org/
+ Author 		URI: http://wordpress.org/
  Description: 	Custom child theme for the Twenty Eleven theme
  Version: 		0.1
  License: 		GNU General Public License
