--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -10,3 +10,21 @@
 */
 @import url("../twentytwelve/style.css");
 /* -------------------------------------------------------------- */
+
+/*top sidebar*/
+
+#tertiary.widget-area {
+	margin: 0 auto;
+	max-width: 68.571428571rem;
+	float: none;
+	}
+	
+
+
+
+/*top sidebar*/
+
+/*main menu*/
+
+
+/*main menu*/
