--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -95,89 +95,81 @@
 	width: 100px;
 	margin: 0px;
 }
+
+
+
+/*main menu*/
+@media screen and (min-width: 600px) {
+	.main-navigation ul#menu-hauptmenu > li{
+		float: right !important;
+		background: pink;
+		width: 14em;
+		margin: 0 0em 0 1em;
+		line-height: 2.792308;
+	}
 	
-/*top sidebar*/
-
-/*main menu*/
-
-
-.main-navigation ul#menu-hauptmenu > li{
-	float: right !important;
-	background: pink;
-	width: 14em;
-	margin: 0 0em 0 1em;
-	line-height: 2.792308;
-}
-
-
-.main-navigation ul#menu-hauptmenu > li a{
-	text-align: center;
-	display: block;	text-transform: none;
-	line-height: 2.792308;
-
-}
-
-
-.main-navigation ul#menu-hauptmenu{
-	border: none;
-	width: 100%;
-	position: relative;
-}
-
-.main-navigation ul#menu-hauptmenu .sub-menu > li > a{
-	width: auto;
-	margin: 0px 0px 0px 0px;
-	line-height: 1.792308;
-	background: #fff;
-	border: none;
-}
-
-.main-navigation li .sub-menu > li{
-	margin: 0px;
-}
-
-#menu-hauptmenu:hover .sub-menu {
-	display:none;
-	visibility: hidden;
-
-}
-
-#menu-hauptmenu > li:hover .sub-menu {
-	display:block;
-	visibility: visible;
-}
-
-#menu-hauptmenu li {
-	display: inline-block;
-	position: static;
-}
-
-/*main menu*/
-
-/* submenu*/
-
-.main-navigation li .sub-menu {
-	left: 0em; 
-	width: 100%;
-	border-top: 1px solid #0b4982;
+	.main-navigation ul#menu-hauptmenu > li a{
+		text-align: center;
+		display: block;	text-transform: none;
+		line-height: 2.792308;
 	
+	}
+	
+	.main-navigation ul#menu-hauptmenu{
+		border: none;
+		width: 100%;
+		position: relative;
+	}
+	
+	.main-navigation ul#menu-hauptmenu .sub-menu > li > a{
+		width: auto;
+		margin: 0px 0px 0px 0px;
+		line-height: 1.792308;
+		background: #fff;
+		border: none;
+	}
+	
+	.main-navigation li .sub-menu > li{
+		margin: 0px;
+	}
+	
+	#menu-hauptmenu:hover .sub-menu {
+		display:none;
+		visibility: hidden;
+	}
+	
+	#menu-hauptmenu > li:hover .sub-menu {
+		display:block;
+		visibility: visible;
+	}
+	
+	#menu-hauptmenu li {
+		display: inline-block;
+		position: static;
+	}
+	
+	/* submenu*/
+	.main-navigation li .sub-menu {
+		left: 0em; 
+		width: 100%;
+		border-top: 1px solid #0b4982;
+		
+	}
+	
+	.main-navigation li.current-menu-item .sub-menu {
+		display: block !important;
+	}
+	
+	.main-navigation li.current-menu-ancestor .sub-menu{
+		display: block;
+	}
+	
+	.main-navigation li.menu-parent-item:hover .sub-menu {
+		background: #fff;
+		width: 100%;
+	}
 }
 
-.main-navigation li.current-menu-item .sub-menu {
-	display: block !important;
-}
-
-.main-navigation li.current-menu-ancestor .sub-menu{
-	display: block;
-}
-
-.main-navigation li.menu-parent-item:hover .sub-menu {
-	background: #fff;
-	width: 100%;
-}
-
-/*submenu*/
-/*main menu*/
 
 
 
@@ -203,7 +195,7 @@
 }
 
 body {
-background-image: url('images/background.png'); /*als img einsetzen und fixen beispiel abwaaehlkalender!!!*/
+	background-image: url('images/background.png'); /*als img einsetzen und fixen beispiel abwaaehlkalender!!!*/
 }
 
 .site-content article {
