--- a/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
+++ b/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
@@ -6,9 +6,9 @@
 
 
 #messageform_wrap{
-	width: 600px;
-	margin-left: 130px;
-	margin-top: 20px;
+	width: 80%;
+	margin: 0em auto;
+	margin-top: 0em;
 }
 .wrap {
 	border: 3px solid #C5DE71;
@@ -97,7 +97,6 @@
 }
 /*additional_______________*/
 #messageform .itemhead:not(.obligated){
-	width:600px;
 	height: 50px;
 	margin-bottom: 10px;
 	background-color: #c5de71;
