--- a/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
+++ b/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
@@ -218,20 +218,22 @@
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.1);
 }
 #messageform .tfcounter {
-	width: 40px;
+	width: auto;
 	padding: 0px;
 	position: relative;
 	display: inline;
 	float: right;
-	top: -1px;
-	left: -58px;
+	top: -14px;
+	left: -39px;
 	text-align: center;
-	font-size: 12px;
+	font-size: 10px;
+	color: gray;
 }
 
 #messageform .message_submit_container{
 	height: 40px;
 }
+
 #messageform #message_submit{
 	background-color: #C5DE71;
 	padding:10px;
