--- a/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
+++ b/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
@@ -4,21 +4,17 @@
 
 }
 
-
 #messageform_wrap{
 	width: 80%;
 	margin: 0em auto;
 	margin-top: 0em;
 }
 .wrap {
-	border: 3px solid #C5DE71;
-	float:left;
-	width:100%;
+	border: 3px solid #cb427a;
+	width: 100%;
 	margin-left: auto;
 	margin-right: auto;
-	-webkit-border-radius: 10px;
-	-moz-border-radius: 10px;
-	border-radius: 10px;
+
 }
 #messageform {
 	width: 100%;
@@ -37,8 +33,9 @@
 #messageform .itemhead.obligated {
 	background: #fff;
 	color: #f6f6f6;
-	background-color: #C5DE71;
+	background-color: #cb427a;
 	height: 50px;
+	width: 100%;
 	margin-bottom:10px;
 }
 #messageform .itemhead.obligated h2, 
@@ -98,8 +95,9 @@
 /*additional_______________*/
 #messageform .itemhead:not(.obligated){
 	height: 50px;
+	width: 100%;
 	margin-bottom: 10px;
-	background-color: #c5de71;
+	background-color: #cb427a;
 	cursor:pointer;
 }
 #messageform .itemhead img.additional {
@@ -184,7 +182,7 @@
 	border-radius: 10px;
 	color: #2A2A2A;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.1);
-	width:198px;
+	width:40%;
 	margin-right:15px;
 	float:left;
 }
