--- a/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
+++ b/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
@@ -20,6 +20,7 @@
 	width: 100%;
 	margin-left: 0px;
 	padding-right:0px;
+	margin-bottom: 2em;
 }
 
 #messageform .wrap,
@@ -36,7 +37,6 @@
 	background-color: #cb427a;
 	height: 30px;
 	width: 100%;
-	margin-bottom:10px;
 }
 #messageform .itemhead.obligated h2, 
 #messageform .itemhead.obligated img{
@@ -47,12 +47,13 @@
 #messageform .itemhead.obligated h2{
 	color:#2a2a2a;
 	font-weight: bold;
+	font-size: 1rem;
 }
 
 /*obligated_______________*/
 
 #messageform .itembody{
-		margin-bottom: 10px;
+		margin-top: 2em;
 		line-height: 30px;
 
 	
@@ -98,10 +99,7 @@
 	clear:none;
 	float:left;
 	box-shadow: none;
-}
-#messageform .itemhead h2 {
-	float:left;
-	font-weight: bold;
+	margin: 0.25em 0em 0em 0.2em;
 }
 
 /* progress bar*/
@@ -132,7 +130,7 @@
 #progressbar .bar {
 	width: 30%;
 	height: 100%;
-	background-color: #c5de71;
+	background-color: #cb427a;
 	-webkit-border-radius: 5px;
 	-moz-border-radius: 5px;
 	border-radius: 5px;
@@ -170,8 +168,9 @@
 	border-radius: 10px;
 	color: #2A2A2A;
 	box-shadow: inset 0 1px 1px rgba(0,0,0,0.1);
-	width:35%;
-	margin-right:15px;
+	width:186px;
+	margin-right:3em;
+	margin-left:2em;
 	float:left;
 }
 #messageform .itembody .topics_container h2,
@@ -179,15 +178,20 @@
 	text-align:center;
 }
 #messageform .itemhead.obligated h2{
-	margin: 0px !important;
+	margin: 0em 0em 0em 2.65em !important;
 	float: none;
-	vertical-align: baseline;
+	padding-top: 6px;
 }
 
 #messageform .itemhead h2{
-	margin: 0;
+	margin: 0.4em 0em 0em 1em;
 	clear: none;
+	float:left;
+	font-weight: bold;
+	font-size: 1rem;
+	color:#2a2a2a
 }
+
 
 
 #messageform .itembody .topics_container h2{
@@ -221,8 +225,8 @@
 	position: relative;
 	display: inline;
 	float: right;
-	top: -14px;
-	left: -39px;
+	top: -24px;
+	left: -40px;
 	text-align: center;
 	font-size: 10px;
 	color: gray;
@@ -233,7 +237,7 @@
 }
 
 #messageform #message_submit{
-	background-color: #C5DE71;
+	background-color: #cb427a;
 	padding:10px;
 	display: block;
 	float:right;
@@ -250,30 +254,59 @@
 	float: left;
 }
 
+#messageform .all_topics_container h2{
+	font-size: 1rem;
+}
+span
+
+#errormessage p{
+	margin: 1em;
+}
+
+#image_upload{
+	margin: 2.1em;
+}
+
+.topics_container button[type="button"]{
+	background: #cb427a;
+}
+
+#messageform .message_submit_container #opinion_submit{
+	background: #cb427a;
+	color: #fff;
+	margin-top: 1em;
+	font-size: 1rem;
+}
+
+#messageform .message_submit_container #opinion_submit:hover{
+	color: #2a2a2a;
+}
+
+
 /*jquery*/
 /* Component containers
 ----------------------------------*/
-.ui-widget {cursor:pointer;margin-left:10px; margin-top:10px; font-family: \\\"Helvetica Neue\\\", Helvetica, Arial, sans-serif; font-size: 15px ; }
+.ui-widget {cursor:pointer;margin-left:10px; margin-top:10px; width: 165px !important; font-family: \\\"Helvetica Neue\\\", Helvetica, Arial, sans-serif; font-size: 15px ; }
 .ui-widget .ui-widget { font-size: 1em; }
 .ui-widget input, .ui-widget select, .ui-widget textarea, .ui-widget button { font-family: \\\"Helvetica Neue\\\", Helvetica, Arial, sans-serif; font-size: 1em; }
 .ui-widget-content {margin-left:0px; margin-top:0px; border: 0px solid #2a2a2a; background: #e8e8e8 url(images/ui-bg_flat_100_e8e8e8_40x100.png) 50% 50% repeat-x; color: #2a2a2a; }
 .ui-widget-content a { color: #2a2a2a; }
-.ui-widget-header {border: 0px solid #2a2a2a; background: #C5DE71 url(images/ui-bg_flat_100_a1cc12_40x100.png) 50% 50% repeat-x; color: #2a2a2a; font-weight: bold; }
+.ui-widget-header {border: 0px solid #2a2a2a; background: #cb427a url(images/ui-bg_flat_100_a1cc12_40x100.png) 50% 50% repeat-x; color: #2a2a2a; font-weight: bold; }
 .ui-widget-header a { color: #2a2a2a; }
 
 /* Interaction states
 ----------------------------------*/
-.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 0px solid #2a2a2a; background: #C5DE71 url(images/ui-bg_flat_100_a1cc12_40x100.png) 50% 50% repeat-x; font-weight: bold; color: #2a2a2a; }
+.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border: 0px solid #2a2a2a; background: #cb427a; font-weight: bold; color: #2a2a2a; }
 .ui-state-default a, .ui-state-default a:link, .ui-state-default a:visited { color: #2a2a2a; text-decoration: none; }
-.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 0px solid #2a2a2a; background: #C5DE71 url(images/ui-bg_flat_100_a1cc12_40x100.png) 50% 50% repeat-x; font-weight: bold; color: #2a2a2a; }
+.ui-state-hover, .ui-widget-content .ui-state-hover, .ui-widget-header .ui-state-hover, .ui-state-focus, .ui-widget-content .ui-state-focus, .ui-widget-header .ui-state-focus { border: 0px solid #2a2a2a; background: #cb427a; font-weight: bold; color: #2a2a2a; }
 .ui-state-hover a, .ui-state-hover a:hover { color: #2a2a2a; text-decoration: none; }
-.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 0px solid #2a2a2a; background: #C5DE71 url(images/ui-bg_flat_100_a1cc12_40x100.png) 50% 50% repeat-x; font-weight: bold; color: #2a2a2a; }
+.ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active { border: 0px solid #2a2a2a; background: #cb427a; font-weight: bold; color: #2a2a2a; }
 .ui-state-active a, .ui-state-active a:link, .ui-state-active a:visited { color: #2a2a2a; text-decoration: none; }
 .ui-widget :active { outline: none; }
 
 /* Interaction Cue
 ----------------------------------*/
-.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #2a2a2a; background: #C5DE71 url(images/ui-bg_glass_100_a1cc12_1x400.png) 50% 50% repeat-x; color: #2a2a2a; }
+.ui-state-highlight, .ui-widget-content .ui-state-highlight, .ui-widget-header .ui-state-highlight  {border: 1px solid #2a2a2a; background: #cb427a url(images/ui-bg_glass_100_a1cc12_1x400.png) 50% 50% repeat-x; color: #2a2a2a; }
 .ui-state-highlight a, .ui-widget-content .ui-state-highlight a,.ui-widget-header .ui-state-highlight a { color: #2a2a2a; }
 .ui-state-error, .ui-widget-content .ui-state-error, .ui-widget-header .ui-state-error {border: 0px solid #cd0a0a; background: #fef1ec url(images/ui-bg_inset-soft_95_fef1ec_1x100.png) 50% bottom repeat-x; color: #cd0a0a; }
 .ui-state-error a, .ui-widget-content .ui-state-error a, .ui-widget-header .ui-state-error a { color: #cd0a0a; }
