--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -9,7 +9,7 @@
 
 */
 @import url("../twentytwelve/style.css");
-/*@import url("http://fonts.googleapis.com/css?family=Cutive");*/
+@import url("http://fonts.googleapis.com/css?family=Cutive");
 /* -------------------------------------------------------------- */
 
 
