ein paar feinheiten in den beiden dokumenten

--- a/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
+++ b/wp-content/plugins/kleem_frontend_post_submitter/style/messageform.css
@@ -257,10 +257,10 @@
 #messageform .all_topics_container h2{
 	font-size: 1rem;
 }
-span
 
-#errormessage p{
-	margin: 1em;
+#messageform .wrap #errormessage {
+	padding-top: 1em;
+	text-align: center;
 }
 
 #image_upload{
