--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -536,9 +536,14 @@ footer[role="contentinfo"] {
 }
 
 .required {
-color: #2a2a2a;
+	color: #2a2a2a;
 }
 
 #respond form input[type="text"], #respond form textarea{
 	line-height: normal;
+}
+
+#respond .oneall_social_login {
+	height: 37px;
+	overflow: hidden;
 }
