--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -521,22 +521,22 @@ footer[role="contentinfo"] {
 
 .post-type-archive-opinion .ratingbox{
 	float: right;
+	width: 250px;
+	margin:0;
 } 
 
 
 .post-type-archive-opinion .ratingbox div > a{
+	float: left;
 	display: inline;
-	margin-right: 1em;
+	margin: 0em 0em 0em 1em;;
 	padding: 0.6em 1.5em 0.4em 1.5em;
 	text-align: center;
 	background: #cb427a;
+	width: 80px;
 }
 
 
-
-.post-type-archive-opinion .ratingbox{
-	width: 37%;
-}
 
 .required {
 color: #2a2a2a;
