--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -254,6 +254,7 @@ body .site {
 		border: none;
 		text-transform: none;
 		padding: 0;
+		/*font-size: 0.9rem;*/
 	}
 	
 	.main-navigation ul#menu-hauptmenu:hover .sub-menu {
@@ -438,6 +439,9 @@ article.type-opinion .opinion_topics .opinion_topic_wrap a{
 	border: 1px solid #cb427a;
 	float:	left;
 	margin-right: 0.8em;
+	-webkit-border-radius: 3px;
+	-moz-border-radius: 3px;
+	border-radius: 3px;
 }
 
 
@@ -451,8 +455,34 @@ article.type-opinion .entry-header{
 	float: none;
 }
 
+
+article.type-opinion .rateometer > .agreement {
+	height: 10px;
+	background: #cb427a;
+	margin-top:1em;
+}
+
+article.type-opinion .rateometer > div {
+	float: left;
+}
+
+article.type-opinion .rateometer > .disaffirmation {
+	height: 10px;
+	background: #ebebeb;
+	margin-top:1em;
+}
+
+article.type-opinion  .stats span.disaffirmation{
+	margin-left: 1.6em;
+}
+
+article.type-opinion .stats span.agreement{
+	margin-left: 0.2em;
+}
+
+
 #primary.site-content article.type-opinion{
-	padding: 1em 1em 5em 1em;
+	padding: 1em 1em 6em 1em;
 	
 }
 
@@ -524,22 +554,30 @@ footer[role="contentinfo"] {
 
 .post-type-archive-opinion .ratingbox{
 	float: right;
-	width: 250px;
-	margin:0;
+	width: 239px;
+	margin:0 0 0 0;
 } 
 
 
 .post-type-archive-opinion .ratingbox div > a{
 	float: left;
 	display: inline;
-	margin: 0em 0em 0em 1em;;
 	padding: 0.6em 1.5em 0.4em 1.5em;
 	text-align: center;
 	background: #cb427a;
 	width: 80px;
+	color: #fff;
+	text-decoration: none;
 }
 
+.post-type-archive-opinion .ratingbox div.agreement > a{
+	margin:0;
+}
 
+.post-type-archive-opinion .ratingbox div.disaffirmation > a{
+	margin: 0em 0em 0em 1em;;
+
+}
 
 .required {
 	color: #2a2a2a;
