--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -445,6 +445,8 @@ article.type-opinion .opinion_topics .opinion_topic_wrap a{
 }
 
 
+
+
 article header.entry-header a .entry-title a,
 article .entry-header a{
 	text-decoration: none;	
@@ -552,29 +554,33 @@ footer[role="contentinfo"] {
 
 
 
-.post-type-archive-opinion .ratingbox{
+.type-opinion .ratingbox{
 	float: right;
 	width: 239px;
 	margin:0 0 0 0;
 } 
 
 
-.post-type-archive-opinion .ratingbox div > a{
+.type-opinion .ratingbox div > a{
 	float: left;
 	display: inline;
 	padding: 0.6em 1.5em 0.4em 1.5em;
 	text-align: center;
-	background: #cb427a;
+	background: #ebebeb;
 	width: 80px;
 	color: #fff;
 	text-decoration: none;
 }
 
-.post-type-archive-opinion .ratingbox div.agreement > a{
+.type-opinion .ratingbox .ratebutton.checked a{
+	background: #cb427a;
+}
+
+.type-opinion .ratingbox div.agreement > a{
 	margin:0;
 }
 
-.post-type-archive-opinion .ratingbox div.disaffirmation > a{
+.type-opinion .ratingbox div.disaffirmation > a{
 	margin: 0em 0em 0em 1em;;
 
 }
