--- a/wp-content/themes/kleem_theme/style.css
+++ b/wp-content/themes/kleem_theme/style.css
@@ -414,6 +414,11 @@ body .site {
 	display: inline;
 }
 
+article.type-opinion h1.entry-title{
+	font-size: 1rem;
+	line-height: 2em;
+}
+
 article header.entry-header img.wp-post-image{
 	display: inline;
 	clear: none;
